Reduce menu item spacing to prevent weather overlap

--- a/css/superfish.css
+++ b/css/superfish.css
@@ -3,7 +3,7 @@
 header nav {
 	float: right;
 	padding-top: 9px;
-	margin-left: 180px;
+	margin-left: 140px;
 }
 
 .sf-menu {
@@ -41,10 +41,10 @@ ul.sf-menu>li {
 	display:inline-block;
 	position: relative;
 	display: inline-block;
-	font-size: 15px;
+	font-size: 14px;
 	white-space: nowrap;
 	line-height: 24px;
-	margin-left: 35px;
+	margin-left: 20px;
 	
 }
 
